name:           mxnet-dataiter-gen
version:        0.2.0.0
synopsis:       mxnet dataiters
description:    Providing the mxnet dataiters as Stream or Conduit
homepage:       https://github.com/pierric/mxnet-dataiter#readme
bug-reports:    https://github.com/pierric/mxnet-dataiter/issues
author:         Jiasen Wu
maintainer:     jiasenwu@hotmail.com
copyright:      2018 Jiasen Wu
license:        BSD3
license-file:   LICENSE
category:       Machine Learning, AI
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/pierric/mxnet-dataiter

executable mxnet-dataiter-gen
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       optparse-applicative >= 0.14 && < 0.15,
                       haskell-src-exts >= 1.20,
                       hslogger >= 1.2,
                       text >= 1.2.0 && < 1.3,
                       mtl,
                       filepath >= 1.4 && < 1.5,
                       directory >= 1.3 && < 1.4,
                       mxnet-base
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
  extra-libraries:     mxnet
