name:           mxnet-dataiter
version:        0.2.0.0
synopsis:       mxnet dataiters
description:    Providing the mxnet dataiters as Stream or Conduit
homepage:       https://github.com/pierric/mxnet-dataiter#readme
bug-reports:    https://github.com/pierric/mxnet-dataiter/issues
author:         Jiasen Wu
maintainer:     jiasenwu@hotmail.com
copyright:      2018 Jiasen Wu
license:        BSD3
license-file:   LICENSE
category:       Machine Learning, AI
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/pierric/mxnet-dataiter

library
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       template-haskell >= 2.10.0.0,
                       streaming >= 0.1.4.5,
                       conduit >= 1.2 && < 1.4,
                       conduit-combinators >= 1.1.2 && < 1.4,
                       mxnet-base,
                       mxnet-nn >= 0.0.2 && < 0.0.3
  exposed-modules:     MXNet.NN.DataIter.Streaming,
                       MXNet.NN.DataIter.Conduit
  other-modules:       Paths_mxnet_dataiter
                       MXNet.NN.DataIter.Raw
  default-extensions:  FlexibleContexts, 
                       DataKinds,
                       TypeOperators, 
                       ExplicitForAll, 
                       TupleSections, 
                       OverloadedLabels, 
                       TypeFamilies
  default-language:    Haskell2010

test-suite streaming
  type:                exitcode-stdio-1.0
  main-is:             streaming.hs
  hs-source-dirs:      test
  build-depends:       base>=4.7 && <5, 
                       hspec==2.*, 
                       streaming >= 0.1.4.5, 
                       mxnet == 0.2.0.0, 
                       mxnet-dataiter
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts, 
                       DataKinds, 
                       TypeApplications

test-suite conduit
  type:                exitcode-stdio-1.0
  main-is:             conduit.hs
  hs-source-dirs:      test
  build-depends:       base>=4.7 && <5, 
                       hspec==2.*, 
                       mxnet == 0.2.0.0, 
                       mxnet-dataiter
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts, 
                       DataKinds, 
                       TypeApplications

Executable lenet
  main-is:              lenet.hs
  other-modules:        Model.Lenet
  hs-source-dirs:       examples
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , unordered-containers >= 0.2.8
                      , vector >= 0.12
                      , mxnet-base
                      , mxnet-ops
                      , mxnet-nn >= 0.0.2 && < 0.0.3
                      , mxnet-dataiter
  default-extensions:   OverloadedLabels
                      , TypeFamilies


Executable cifar10
  main-is:              cifar10.hs
  other-modules:        Model.Resnet,
                        Model.Resnext
  hs-source-dirs:       examples
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5.0
                      , unordered-containers >= 0.2.8
                      , vector >= 0.12
                      , optparse-applicative
                      , lens >= 4.12
                      , mxnet-base
                      , mxnet-ops
                      , mxnet-nn >= 0.0.2 && < 0.0.3
                      , mxnet-dataiter
  default-extensions:   OverloadedLabels
                      , TypeFamilies
